# Bible

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  svelte.config.js
docs/: CPDV.html  index.html
docs/CPDV/: 1-Chronicles.html  1-Corinthians.html  1-John.html  1-Kings.html  1-Maccabees.html  1-Peter.html  1-Samuel.html  1-Thessalonians.html  1-Timothy.html  2-Chronicles.html  2-Corinthians.html  2-John.html  2-Kings.html  2-Maccabees.html  2-Peter.html  2-Samuel.html  2-Thessalonians.html  2-Timothy.html  3-John.html  Acts.html  Amos.html  Baruch.html  Colossians.html  Daniel.html  Deuteronomy.html  Ecclesiastes.html  Ephesians.html  Esther.html  Exodus.html  Ezekiel.html  Ezra.html  Galatians.html  Genesis.html  Habakkuk.html  Haggai.html  Hebrews.html  Hosea.html  Isaiah.html  James.html  Jeremiah.html  (+34 more)
docs/CPDV/1-Chronicles/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  (+8 more)
docs/_app/: error.svelte-1c6354b8.js  error.svelte-7dec860a.js  error.svelte-f3f221d0.js  manifest.json  start-28c130ea.js  start-53a2147d.js  start-5b63d83e.js  start-6cea63e0.js  start-72591733.js  start-b622ca62.js  start-c6477680.js  start-eed72ca5.js  version.json
docs/search/: CPDV.html
src/: main.rs
src/lib/: BackFooter.svelte  BibleNavigator.svelte  Books.svelte  LinkCard.svelte  QuickLookup.svelte  Search.svelte  ThemeMode.svelte  VerseCard.svelte  VerseList.svelte  bible.js
src/routes/: __layout.svelte  index.svelte
(+2704 files in other folders)
