[package]
name = "bible"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axohtml = "0.5.0"
dotenv = "0.15.0"
sqlx = { version = "0.7.3", features=["runtime-tokio", "macros","sqlite"]}
tokio = {version = "1.35.1", features=["rt-multi-thread", "macros"]}
